--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "getmac": "^5.20.0",
     "google-translate-api": "^2.3.0",
     "googletrans": "^1.0.4",
+    "grammy": "^1.18.1",
     "input": "^1.0.1",
     "jsonwebtoken": "^9.0.0",
     "latin-krill": "^1.0.0",
